[package]
name = "inverted-pendulum"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build"]

[dependencies]
bevy = "0.13"
bevy_rapier2d = "0.25"
bevy_egui = "0.27.1"
egui_plot = "0.27.2"
bevy-inspector-egui = "0.23.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true